src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Ownership_Match__c</fullName>
        <description>for reporting purposes only to dataload ownership to match so MBA mapping is accurate</description>
        <formula>IF(Account.OwnerId = OwnerId , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Account Ownership Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Partner_Source__c</fullName>
        <description>Name of the Contact&apos;s Account Partner</description>
        <formula>Account.Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Contact&apos;s Account Partner</inlineHelpText>
        <label>zPAR Account Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoResponder_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zAutoResponder Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_MBA_Phone_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad MBA Phone 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_MBA_Phone_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad MBA Phone 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_MBA_Phone_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad MBA Phone 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Campaign__c</fullName>
        <label>zChannel Partner Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Business Catalyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIG Re-engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell: Old Bronze Old Silver Temp Batch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Service Agency July2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_and_Account_IDs_Match__c</fullName>
        <formula>MBAAccountID__c =  MBAClientID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client and Account IDs Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <description>Stores a value of 1 so we can report on number of contacts.</description>
        <formula>1</formula>
        <inlineHelpText>Stores a value of 1 so we can report on number of contacts.</inlineHelpText>
        <label>REPORT Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Unique_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Contact Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain__c</fullName>
        <description>describes the inferred email domain of the field Contact.Email</description>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_2__c</fullName>
        <inlineHelpText>is the secondary email address of this contact</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Domain__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>is an inferred hash key to improve performance. This field was deprecated.</inlineHelpText>
        <label>Email Domain and Contact Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Create_Opportunity__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;006/e?conid=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Create Opportunity&quot; screen. It allows the user to create an opportunity with a contact role. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Create Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_LinkedIn__c</fullName>
        <formula>&apos;http://www.linkedin.com/search/fpsearch?type=people&amp;keywords=&apos; &amp;
SUBSTITUTE(SUBSTITUTE(FirstName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;) &amp; &apos;+&apos;
&amp; SUBSTITUTE(SUBSTITUTE(LastName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;LinkedIn&quot; lookup screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Log_a_Call__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;00T/e?title=Call&amp;who_id=&apos; &amp; Id &amp; &apos;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&apos; &amp; Id &amp; &apos;&amp;ent=Task&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Log a Call&quot; screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedAt__c</fullName>
        <description>For BMP Only - if the contact was deleted, date time that the contact was deleted</description>
        <inlineHelpText>For BMP Only - if the contact was deleted, date time that the contact was deleted</inlineHelpText>
        <label>Deleted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For BMP only - was the contact deleted in BMP</description>
        <inlineHelpText>For BMP only - was the contact deleted in BMP</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Requested_Date__c</fullName>
        <description>Field used to determine if there was a ever a demo request submitted and if so, the date of the demo request.</description>
        <label>Demo Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a duplicate of another contact in Salesforce?(auto based on email).</description>
        <inlineHelpText>Is this a duplicate of another contact in Salesforce?</inlineHelpText>
        <label>Duplicate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Bounce_in_Hubspot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Mike Smith prior to the Hubspot integration to SF. Manually populated by dataloader so he knew which contacts not to pull for email campaigns. Can probably be deletd</description>
        <inlineHelpText>Created for Mike Smith prior to the Hubspot integration to SF. Manually populated by dataloader so he knew which contacts not to pull for email campaigns. Can probably be deletd</inlineHelpText>
        <label>zMKT Email Bounce in Hubspot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enroll_in_Hubspot_Workflow__c</fullName>
        <description>We added this when we</description>
        <label>zMKT Enroll in Hubspot Workflow</label>
        <picklist>
            <picklistValues>
                <fullName>Call #  Email (Left Voicemail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call #1 Email (Contacted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call #1 Email (Bad Number)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call #3 Email (Add product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST UPS Object Storage Workflow Silver Next to Gold Over Limit (cloned)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Followed_Up_to_Twitter_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zFollowed Up to Twitter Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score_Difference__c</fullName>
        <formula>Hubspot_Score__c  -  Initial_Hubspot_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zMKT Hubspot Score Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score__c</fullName>
        <label>zMKT Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score_at_Conversion__c</fullName>
        <label>zMKT Hubspot Score at Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I3_Tier_Number__c</fullName>
        <description>Tier Number sent to I3 phone system for routing</description>
        <inlineHelpText>Tier Number sent to I3 phone system for routing</inlineHelpText>
        <label>zI3 Tier Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Hubspot_Score__c</fullName>
        <label>zMKT Initial Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>What is this person&apos;s job function? Mapped from lead.</description>
        <inlineHelpText>What is this person&apos;s job function? Mapped from lead.</inlineHelpText>
        <label>zJob Function</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAClientID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_1__c</fullName>
        <label>MBA Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_2__c</fullName>
        <label>MBA Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_3__c</fullName>
        <label>MBA Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Referral_ID__c</fullName>
        <description>Added for partner driven demo requests per BAP-2988.</description>
        <label>MBA Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <description>Fed from Hubspot with form information</description>
        <label>Marketing Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_longer_with_the_company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer with the company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_English_Speaking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mapped from lead field</description>
        <label>Non English Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opened_Pricing_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mapped from lead</description>
        <label>zOpened Pricing PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Openend_Product_Tour_Recording__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mapped to lead field</description>
        <label>zOpenend Product Tour Recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>zMKT Owner Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pinterest_eBook_Date__c</fullName>
        <label>zPinterest eBook Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pinterest_eBook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zPinterest eBook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_MBA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact with an email match to the MBA Account admin email address</inlineHelpText>
        <label>Primary MBA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RVAccountName__c</fullName>
        <label>zRV Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVMemberId__c</fullName>
        <externalId>true</externalId>
        <label>RV Member Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RV_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RV Account</label>
        <referenceTo>rvpe__RVAccount__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RV_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RV Member</label>
        <referenceTo>rvpe__RVMember__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recorded_Product_Tour_Date__c</fullName>
        <label>zRecorded Product Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Phone__c</fullName>
        <description>Phone number entered by Sales Rep</description>
        <inlineHelpText>Use this field to store a preferred phone number for this contact.</inlineHelpText>
        <label>Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Indicates whether the account exists in MBA or BMP</description>
        <inlineHelpText>Indicates whether the account exists in MBA or BMP</inlineHelpText>
        <label>Provisioning System</label>
        <picklist>
            <picklistValues>
                <fullName>BMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Old - was used by Acq when they worked contacts but can probably be removed.  hass would know for sure</description>
        <label>zStage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Squad_Consultant__c</fullName>
        <description>Old - was used by SSquad when they worked contacts but can probably be removed.  Steven Bennett would know for sure</description>
        <formula>Account.SSC__r.FirstName&amp;&quot; &quot;&amp; Account.SSC__r.LastName</formula>
        <label>zSuccess Squad Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_PIN__c</fullName>
        <formula>Account.SupportPin__c</formula>
        <label>Support PIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the record should be synced with Marketo. Marketo has a filter stored for BigCommerce to only look at records with this checkbox checked.</description>
        <label>Sync with Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>not sure if this is needed.  was working on a way to show time zone based on phone number, but have to get an app to do what I was thinking. -Joy</description>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Active_Account_Value__c</fullName>
        <formula>Account.Active_MRR_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zTotal Active Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type is set from BMP on the contact.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner RV Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Time_Zone__c</fullName>
        <label>US Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaiian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Viewed_Recorded_Tour_before_Conversion__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate)  &gt;   Recorded_Product_Tour_Date__c   ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zViewed Recorded Tour before Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Date__c</fullName>
        <label>zWebinar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Webinar_Name__c</fullName>
        <description>Can probably delete but ask Miles.  Was used before the Webinar object existed</description>
        <label>zWebinar Name</label>
        <picklist>
            <picklistValues>
                <fullName>Success Squad - Store Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Things to Boost Sales in 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using Content to grow eCommerce Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce Partner Program and You</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The 3 Keys to Next-Level Conversion</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Questions__c</fullName>
        <description>Can probably delete but ask Miles.  Was used before the Webinar object existed</description>
        <label>zWebinar Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Status__c</fullName>
        <description>Can probably delete but ask Miles.  Was used before the Webinar object existed</description>
        <label>zWebinar Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watched Recording</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gaClientID__c</fullName>
        <label>GA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchCampaign__c</fullName>
        <label>GA FirstTouch Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchChannel__c</fullName>
        <label>GA FirstTouch Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchDate__c</fullName>
        <label>GA First Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gafirstTouchKeyword__c</fullName>
        <label>GA FirstTouch Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchMedium__c</fullName>
        <label>GA FirstTouch Medium</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gafirstTouchSource__c</fullName>
        <label>GA FirstTouch Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchCampaign__c</fullName>
        <label>GA LastTouch Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchChannel__c</fullName>
        <label>GA LastTouch Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchDate__c</fullName>
        <label>GA Last Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>galastTouchKeyword__c</fullName>
        <label>GA LastTouch Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchMedium__c</fullName>
        <label>GA LastTouch Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>galastTouchSource__c</fullName>
        <label>GA LastTouch Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gatotalTouchCount__c</fullName>
        <label>GA TotalTouch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lmsilt__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lmsilt__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Contact&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
</CustomObject>